err/unisos.marme.err
Listing '.'...
Listing './bin'...
Compiling './bin/bx822-qmail-remote.py'...
***   File "./bin/bx822-qmail-remote.py", line 389
    print inMsg.as_string()
              ^
SyntaxError: invalid syntax

Compiling './bin/inMailDsnProc.py'...
***   File "./bin/inMailDsnProc.py", line 161
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/inMailRetrieve.py'...
***   File "./bin/inMailRetrieve.py", line 144
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/inMailUserAgent.py'...
***   File "./bin/inMailUserAgent.py", line 143
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/marmeAcctsManage.py'...
***   File "./bin/marmeAcctsManage.py", line 141
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/marmeRuns.py'...
***   File "./bin/marmeRuns.py", line 148
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/marmeSendIcm.py'...
***   File "./bin/marmeSendIcm.py", line 160
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/marmeTrackingIcm.py'...
***   File "./bin/marmeTrackingIcm.py", line 167
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/pkgMarmeManage.py'...
***   File "./bin/pkgMarmeManage.py", line 143
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/flufl'...
Listing './lib/python3.5/site-packages/flufl/bounce'...
Listing './lib/python3.5/site-packages/flufl/bounce/_detectors'...
Listing './lib/python3.5/site-packages/flufl/bounce/_detectors/tests'...
Listing './lib/python3.5/site-packages/flufl/bounce/docs'...
Listing './lib/python3.5/site-packages/flufl/bounce/tests'...
Listing './lib/python3.5/site-packages/flufl/bounce/tests/data'...
Listing './lib/python3.5/site-packages/flufl.bounce-2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unisos'...
Listing './lib/python3.5/site-packages/unisos/common'...
Compiling './lib/python3.5/site-packages/unisos/common/icmCmndsRun.py'...
***   File "./lib/python3.5/site-packages/unisos/common/icmCmndsRun.py", line 171
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unisos/common/icmsPkgLib.py'...
***   File "./lib/python3.5/site-packages/unisos/common/icmsPkgLib.py", line 168
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/unisos/icm'...
Compiling './lib/python3.5/site-packages/unisos/icm/icm.py'...
***   File "./lib/python3.5/site-packages/unisos/icm/icm.py", line 251
    print "This is default Cmnd Class Definition -- It is expected to be overwritten. You should never see this."
                                                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/unisos/marme'...
Compiling './lib/python3.5/site-packages/unisos/marme/icmsPkgThis.py'...
***   File "./lib/python3.5/site-packages/unisos/marme/icmsPkgThis.py", line 168
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unisos/marme/marmeAcctsLib.py'...
***   File "./lib/python3.5/site-packages/unisos/marme/marmeAcctsLib.py", line 170
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unisos/marme/marmeSendLib.py'...
***   File "./lib/python3.5/site-packages/unisos/marme/marmeSendLib.py", line 187
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unisos/marme/marmeTrackingLib.py'...
***   File "./lib/python3.5/site-packages/unisos/marme/marmeTrackingLib.py", line 190
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/unisos/marme-base'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo/fp'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo/fp/icmsPkgBasesPolicy'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo/fp/icmsPkgControlBaseDir'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo/fp/icmsPkgControlName'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo/fp/icmsPkgLogBaseDir'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo/fp/icmsPkgName'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo/fp/icmsPkgTmpBaseDir'...
Listing './lib/python3.5/site-packages/unisos/marme-base/pkgInfo/fp/icmsPkgVarBaseDir'...
Listing './lib/python3.5/site-packages/unisos/ucf'...
Compiling './lib/python3.5/site-packages/unisos/ucf/ucf.py'...
***   File "./lib/python3.5/site-packages/unisos/ucf/ucf.py", line 106
    raise ValueError, 'Attribute %s already has a value and so cannot be written to' % attr
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/unisos/x822Msg'...
Compiling './lib/python3.5/site-packages/unisos/x822Msg/msgIn.py'...
***   File "./lib/python3.5/site-packages/unisos/x822Msg/msgIn.py", line 175
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unisos/x822Msg/msgLib.py'...
***   File "./lib/python3.5/site-packages/unisos/x822Msg/msgLib.py", line 170
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unisos/x822Msg/msgOut.py'...
***   File "./lib/python3.5/site-packages/unisos/x822Msg/msgOut.py", line 256
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/unisos.common-0.4.egg-info'...
Listing './lib/python3.5/site-packages/unisos.icm-0.12.egg-info'...
Listing './lib/python3.5/site-packages/unisos.marme-0.13.egg-info'...
Listing './lib/python3.5/site-packages/unisos.ucf-0.12.egg-info'...
Listing './lib/python3.5/site-packages/unisos.x822Msg-0.8.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
